feat: flappy mini app + manifest; yarn build; robust leaderboard api

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-JWT_SECRET=random_secret
-NEXT_PUBLIC_URL=http://localhost:3000
-NEXT_PUBLIC_MINIKIT_PROJECT_ID="miniapp-starter"
-NEXT_PUBLIC_FARCASTER_HEADER="string"
-NEXT_PUBLIC_FARCASTER_PAYLOAD="string"
-NEXT_PUBLIC_FARCASTER_SIGNATURE="string"
-NEYNAR_API_KEY="string"
-REDIS_URL="string"
-REDIS_TOKEN="string"
+// lib/env.ts
+// Non-throwing env access so builds never crash on missing vars.
+
+export const env = {
+  // Public (client) — safe to be empty in dev
+  NEXT_PUBLIC_URL: process.env.NEXT_PUBLIC_URL ?? '',
+  NEXT_PUBLIC_FARCASTER_HEADER: process.env.NEXT_PUBLIC_FARCASTER_HEADER ?? '',
+  NEXT_PUBLIC_FARCASTER_PAYLOAD: process.env.NEXT_PUBLIC_FARCASTER_PAYLOAD ?? '',
+  NEXT_PUBLIC_FARCASTER_SIGNATURE: process.env.NEXT_PUBLIC_FARCASTER_SIGNATURE ?? '',
+
+  // Server — optional; API routes should guard usage
+  REDIS_URL: process.env.REDIS_URL ?? '',
+  REDIS_TOKEN: process.env.REDIS_TOKEN ?? '',
+};
