--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@frames.js/debugger": "^0.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.64.2",
+    "@upstash/redis": "^1.34.3",
     "eruda": "^3.2.3",
     "jiti": "1.21.7",
     "jose": "^5.9.6",
