--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "frames": "frames"
   },
   "dependencies": {
+    "@coinbase/onchainkit": "^1.1.1",
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/frame-node": "^0.0.21",
     "@farcaster/frame-sdk": "^0.0.35",
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@frames.js/debugger": "^0.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query": "^5.90.5",
     "@upstash/redis": "^1.34.3",
+    "@walletconnect/modal": "^2.7.0",
     "eruda": "^3.2.3",
     "jiti": "1.21.7",
     "jose": "^5.9.6",
@@ -25,6 +27,8 @@
     "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "viem": "^2.38.3",
+    "wagmi": "^2.18.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
