--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@farcaster/frame-node": "^0.0.21",
     "@farcaster/frame-sdk": "^0.0.35",
     "@farcaster/miniapp-sdk": "^0.2.1",
+    "@farcaster/miniapp-wagmi-connector": "^1.1.0",
     "@frames.js/debugger": "^0.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.90.5",
@@ -28,7 +29,7 @@
     "react": "^18",
     "react-dom": "^18",
     "viem": "^2.38.3",
-    "wagmi": "^2.18.1",
+    "wagmi": "^2.18.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
